api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: api
    spec:
      containers:
        - name: api
          image: leopoldox3/api-avatares:v1
          imagePullPolicy: Always
      restartPolicy: Always
