nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - name: nginx
          image: leopoldox3/nginx-avatares:v1
          ports:
            - containerPort: 80
              protocol: TCP
      imagePullSecrets:
        - name: my-registry-secret
      restartPolicy: Always
